# AetherionOS

./: ANALYSIS_SESSION.md  CHANGELOG.md  CORRECTIONS_APPLIED.md  COUCHE4_COMPLETE.md  DOCUMENTARY_RESEARCH_REPORT.md  LICENSE  PHASE1_RESULTS.md  QEMU_OUTPUT_J13.txt  QEMU_OUTPUT_J14_J15.txt  QEMU_OUTPUT_J16.txt  QEMU_OUTPUT_J17.txt  README.md  SESSION_COUCHE1_COMPLETE.md  SESSION_HAL_COMPLETE.md  SESSION_REPORT.md  STATUS.md  STATUS_COUCHE1.md  finalize_hal.sh  install_and_test_hal.sh  test_couche2_rigoureux.sh
.cargo/: config.toml
docs/: COUCHE1_COMPLETE.md  COUCHE1_HAL.md  COUCHE1_SESSION_REPORT.md  COUCHE1_STATUS.md  DECISION_KERNEL.md  arch.dot
kernel/: Cargo.toml  FIXES_SUMMARY.md  build.rs  linker.ld  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs
kernel/src/acha/: early_security.rs  events.rs  metrics.rs  mod.rs
kernel/src/allocator/: bump.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: context.rs  gdt.rs  idt.rs  interrupts.rs  mod.rs  pci.rs  syscall.rs  timer.rs
kernel/src/drivers/: mod.rs  serial.rs
kernel/src/drivers/sdr/: demodulator.rs  mod.rs  rtlsdr.rs
kernel/src/drivers/usb/: mod.rs
kernel/src/elf/: mod.rs
kernel/src/fs/: manifest.rs  mod.rs  vfs.rs
kernel/src/gdt/: mod.rs
kernel/src/gpu/: allocator.rs  mod.rs
kernel/src/hal/: logger.rs  mod.rs  panic.rs
kernel/src/ipc/: bus.rs  mod.rs
kernel/src/memory/: frame.rs  heap.rs  mod.rs  paging.rs  resource_tag.rs
kernel/src/net/: arp.rs  ethernet.rs  icmp.rs  ipv4.rs  mod.rs  socket.rs  udp.rs  virtio_net.rs
kernel/src/process/: mod.rs  task.rs
kernel/src/scheduler/: mod.rs
kernel/src/security/: mod.rs  pcr.rs  tpm.rs
kernel/src/tests/: mod.rs
kernel/src/verifier/: hooks.rs  mod.rs  policy.rs
scripts/: build_c.sh  build_hello.sh
userspace/: agent_math.asm  hello.asm  hello.elf  hello.ld  shell.asm
userspace/c_apps/: c_app.ld  hello_c.c  libc_stub.c  libc_stub.h
