[package]
name = "aetherion-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Cabrel Foka <cabrel@aetherion.dev>"]
license = "MIT"
description = "Aetherion OS Kernel - Couche 1 HAL"

[dependencies]
# Bootloader 0.9.23 - plus léger, compile en < 300s
# CRITICAL: La feature "map_physical_memory" est REQUISE pour accéder à physical_memory_offset
# Sans cette feature, boot_info.physical_memory_offset n'existe pas (cf. docs bootloader)
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }

# Serial port pour debug
uart_16550 = "0.2"

# Heap allocator
spin = { version = "0.9", default-features = false, features = ["spin_mutex"] }

# Lazy static pour initialisation
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# x86_64 architecture support - GDT, IDT, TSS
x86_64 = "0.14.13"

# PIC 8259 Programmable Interrupt Controller
pic8259 = "0.10.4"

# SHA256 for TPM PCR measurements (no_std, force-soft for compatibility)
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }

# ArrayString for macros (no_std)
arrayvec = { version = "0.7", default-features = false }

# Heap allocator pour alloc (Box, Vec)
linked_list_allocator = "0.10.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true         # Link Time Optimization
opt-level = 2      # Optimize for size and speed
codegen-units = 1  # Better optimization, slower compile

[profile.test]
panic = "unwind"   # Allow panics in tests

# =============================================================================
# Bootloader Configuration (bootloader 0.9.x)
# =============================================================================
# Ces options configurent comment le bootloader configure la mémoire avant
# de passer le contrôle au kernel.
# 
# CRITICAL: map-physical-memory doit être activé pour que physical_memory_offset
# soit disponible dans BootInfo. Sans cela, memory::init() échouera.
# 
# Référence: https://docs.rs/bootloader/0.9.23/bootloader/
# =============================================================================
[package.metadata.bootloader]
# Mapper toute la mémoire physique à un offset virtuel
# Cela permet d'accéder à n'importe quelle adresse physique via:
# virt_addr = physical_memory_offset + phys_addr
map-physical-memory = true

# Offset où mapper la mémoire physique (haut de l'espace d'adressage kernel)
# Par défaut: 0xFFFF800000000000 (haut de l'espace 48-bit x86_64)
physical-memory-offset = "0xFFFF800000000000"

# Taille de la stack kernel (en pages de 4KB)
# Par défaut: 64 (256 KB)
#kernel-stack-size = 64

# Adresse de la stack kernel (optionnel)
#kernel-stack-address = "0xFFFFFF8000000000"
