[package]
name = "aetherion-kernel"
version = "0.2.0"
edition = "2021"
authors = ["Cabrel Foka <cabrel@aetherion.dev>"]
license = "MIT"
description = "Aetherion OS Kernel - Couche 2 Memory Management"

[dependencies]
# Bootloader 0.9.23 - compatible with nightly-2023-08-01
# CRITICAL: La feature "map_physical_memory" est REQUISE pour physical_memory_offset
bootloader = { version = "=0.9.23", features = ["map_physical_memory"] }

# Serial port pour debug
uart_16550 = "0.2"

# Spin mutex (no_std)
spin = { version = "0.9", default-features = false, features = ["spin_mutex"] }

# Lazy static pour initialisation
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# x86_64 architecture support - GDT, IDT, TSS
# PINNED to 0.14.11 for nightly-2023-08-01 compatibility (Step trait)
x86_64 = "=0.14.11"

# PIC 8259 Programmable Interrupt Controller
pic8259 = "0.10.4"

# SHA256 for TPM PCR measurements (no_std, force-soft for compatibility)
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }

# ArrayString for macros (no_std)
arrayvec = { version = "0.7", default-features = false }

# Heap allocator pour alloc (Box, Vec)
linked_list_allocator = "0.10.5"

[profile.dev]
panic = "abort"
opt-level = 1      # Faster dev builds

[profile.release]
panic = "abort"
lto = true         # Link Time Optimization
opt-level = 2      # Optimize for size and speed
codegen-units = 1  # Better optimization, slower compile

# =============================================================================
# Bootloader Configuration (bootloader 0.9.x)
# =============================================================================
# Ces options configurent comment le bootloader configure la mémoire avant
# de passer le contrôle au kernel.
# 
# CRITICAL: map-physical-memory doit être activé pour que physical_memory_offset
# soit disponible dans BootInfo. Sans cela, memory::init() échouera.
# 
# Référence: https://docs.rs/bootloader/0.9.23/bootloader/
# =============================================================================
[package.metadata.bootloader]
# Offset to map physical memory in virtual space
# Default: dynamically chosen by bootloader if not specified
physical-memory-offset = "0xFFFF800000000000"
