[package]
name = "aetherion-kernel"
version = "0.8.0"
edition = "2021"
authors = ["MORNINGSTAR <morningstar@aetherion.dev>"]
license = "MIT"
description = "Aetherion OS Kernel - Couche 8: Priority Scheduler + GPU VRAM Stub"

[dependencies]
# Bootloader 0.9.23 - compatible with nightly-2023-08-01
# CRITICAL: La feature "map_physical_memory" est REQUISE pour physical_memory_offset
bootloader = { version = "=0.9.23", features = ["map_physical_memory"] }

# Serial port for debug
uart_16550 = "0.2"

# Spin mutex (no_std)
spin = { version = "0.9", default-features = false, features = ["spin_mutex"] }

# Lazy static for initialization
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# x86_64 architecture support - GDT, IDT, TSS
# PINNED to 0.14.11 for nightly-2023-08-01 compatibility (Step trait)
x86_64 = "=0.14.11"

# PIC 8259 Programmable Interrupt Controller
pic8259 = "0.10.4"

# SHA256 for TPM PCR measurements (no_std, force-soft for compatibility)
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }

# ArrayString for macros (no_std)
arrayvec = { version = "0.7", default-features = false }

# Heap allocator for alloc (Box, Vec)
linked_list_allocator = "0.10.5"

# Cognitive Bus - Lock-free MPMC queue (no_std compatible)
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = false
opt-level = 2
codegen-units = 4     # More CUs = less memory per unit

[package.metadata.bootloader]
physical-memory-offset = "0xFFFF800000000000"
